--- a/css/styles.css
+++ b/css/styles.css
@@ -21,11 +21,24 @@ h1
 
   color:#a7d129;
   font-family: 'Tangerine', cursive;
+}
+.centre_text
+{
+  position: absolute;
+  height:50%;
+  width:70%;
+  background-color: black;
+  left: 15%;
+  top:25%;
   text-align: center;
 }
 #name
 {
   font-size: 100px;
+}
+#position
+{
+  font-size: 60px;
 }
 #div2
 {
