--- a/css/styles.css
+++ b/css/styles.css
@@ -21,24 +21,42 @@ h1
 
   color:#a7d129;
   font-family: 'Rokkitt', serif;
+  text-align: center;
 }
 .centre_text
 {
-  position: absolute;
-  height:30%;
-  width:70%;
-  background-color: black;
-  left: 15%;
-  top:35%;
+  position: relative;
+  background-color:yellow;
+  /*background-image: image("laptop.png");*/
+  display: inline-block;
+  height:80vh;
+  width:90vh;
+  /*background-color: black;*/
+  top:10vh;
   text-align: center;
 }
 #name
 {
+  position: absolute;
+  top:20%;
   font-size: 60px;
+  z-index:2;
 }
 #position
 {
+  position: absolute;
+  top:20%;
+  z-index:2;
   font-size: 30px;
+}
+#laptop
+{
+  position: absolute;
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  z-index:1;
 }
 #div2
 {
