--- a/css/master.css
+++ b/css/master.css
@@ -55,3 +55,9 @@ body, html {
     width:100%;
     background-color:black;
 }
+.box-image-pic
+{
+    height:35vh;
+    width:100%;
+    object-fit: cover;
+}
